<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
    </group>

    <item android:title="@string/admin_options">
        <menu>
            <item
                android:id="@+id/nav_admin_class"
                android:icon="@drawable/ic_class"
                android:title="@string/manage_student_amp_class" />
            <item
                android:id="@+id/nav_admin_staff"
                android:icon="@drawable/ic_staff"
                android:title="@string/manage_staff" />
            <item
                android:id="@+id/nav_admin_subject"
                android:icon="@drawable/ic_subject"
                android:title="@string/manage_subjects" />
            <item
                android:id="@+id/nav_admin_assessment"
                android:icon="@drawable/ic_book"
                android:title="@string/manage_assessment_information" />
            <item
                android:id="@+id/nav_admin_timetable"
                android:icon="@drawable/ic_today"
                android:title="@string/manage_timetable" />
            <item
                android:id="@+id/nav_admin_calendar"
                android:icon="@drawable/ic_calendar"
                android:title="@string/manage_school_calendar" />
            <item
                android:id="@+id/nav_admin_social_platform"
                android:icon="@drawable/ic_discussions"
                android:title="@string/manage_discussions" />
            <item
                android:id="@+id/nav_admin_gallery"
                android:icon="@drawable/ic_gallery"
                android:title="@string/manage_gallery" />
            <item
                android:id="@+id/nav_admin_info"
                android:icon="@drawable/ic_info"
                android:title="@string/manage_school_information" />
            <item
                android:id="@+id/nav_admin_log"
                android:icon="@drawable/ic_log"
                android:title="@string/log" />
        </menu>
    </item>

    <item android:title="Extra">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="Profile" />
            <item
                android:id="@+id/nav_chats"
                android:icon="@drawable/ic_chat"
                android:title="Chats" />
            <item
                android:id="@+id/nav_discussions"
                android:icon="@drawable/ic_discussions"
                android:title="Discussions" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_gallery"
                android:title="Photo Gallery" />
            <item
                android:id="@+id/nav_teachers_calendar"
                android:icon="@drawable/ic_calendar"
                android:title="School Calendar" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="School Information" />
        </menu>
    </item>
</menu>